# CMakeProjects

./: README.md
HelloApp/Source/: CMakeLists.txt  hello.cpp
HelloAppMultiFiles/: CMakeLists.txt
HelloAppMultiFiles/include/: dog.h  operations.h
HelloAppMultiFiles/src/: dog.cpp  main.cpp  operations.cpp
HelloAppMultiFiles2/: CMakeLists.txt
HelloAppMultiFiles2/include/: dog.h  operations.h
HelloAppMultiFiles2/src/: log.cpp  main.cpp
